--- a/colibri/index.html
+++ b/colibri/index.html
@@ -49,13 +49,13 @@
                 </ul>
                  <img class="little-logo" src="img/logo.png" alt="">
             </div>
-            <button class="button-header popup">Заказать звонок</button>
+            <button style="position: absolute;" class="button-header popup">Заказать звонок</button>
         </header>
     </div>
         <section class="top-form clip">
             <div class="content-wrapper">
             <h1>Таможенное оформление</h1>
-            <p>на любом посту РФ</p>
+            <p>на любом посту РФ от 5 минут</p>
             <p>Расчет таможенных платежей</p>
             <div class="tabs">
                 <div class="tabs-buttons">
@@ -95,17 +95,17 @@
             <div class="header-card wow slideInLeft">
                 <img src="img/1_2.png" alt="">
                 <p>Таможенное оформление</p>
-                <span>Колибри  является официальным таможенным представителем работающим со всеми таможенными постами Российской Федерации. Наши специалисты осуществят для Вас таможенное оформление любого товара, обеспечив при этом беспрепятственное прохождение таможни в минимальные сроки.  </span>
+                <span>Колибри -  является официальным таможенным представителем, работающим со всеми таможенными постами Российской Федерации. Наши специалисты, осуществят для Вас таможенное оформление любого товара, обеспечив при этом беспрепятственное прохождение таможни в минимальные сроки.    </span>
             </div>
             <div class="header-card wow bounceInUp">
                 <img src="img/2_2.png" alt="">
                 <p>Таможенный представитель</p>
-                <span>Колибри  является официальным таможенным представителем работающим со всеми таможенными постами Российской Федерации. Наши специалисты осуществят для Вас таможенное оформление любого товара, обеспечив при этом беспрепятственное прохождение таможни в минимальные сроки.  </span>
+                <span>Данная услуга будет для Вас актуальна, в случае если необходим непосредственный контакт с Таможенными органами, участие в досмотре, отборе проб и образцов, согласование таможенной стоимости и прочих таможенных операциях. Доверьте общение с Таможенными органами профессиональным таможенным агентам.  </span>
             </div>
             <div class="header-card wow slideInRight">
                 <img src="img/3_2.png" alt="">
                 <p>Сертификация</p>
-                <span>Прямое сотрудничество с ведущими сертификационными органами и лабораториями позволяет быстро и качественно оформить для Вас любую разрешительную документацию. Доверьте сертификацию Вашего товара специалистам Колибри и спокойно занимайтесь развитием своего бизнеса.</span>
+                <span>Прямое сотрудничество с ведущими сертификационными органами и лабораториями позволяет быстро и качественно оформить для Вас любую разрешительную документацию. Доверьте сертификацию Вашего товара специалистам Колибри и спокойно занимайтесь развитием Своего бизнеса.</span>
             </div>
         </div>
         </section>
@@ -173,7 +173,7 @@
         </div>
         <div class="item item-long flex wow bounceInUp">
             <img src="img/2_1.png" alt="">
-            <p class="item-text"><span>2 шаг</span><br>Расход и согласование таможенных платежей и расходов</p>
+            <p class="item-text"><span>2 шаг</span><br>Расчет и согласование таможенных платежей и расходов</p>
         </div>
         <div class="item item-long flex wow slideInRight">
             <img src="img/3_1.png" alt="">
@@ -181,7 +181,7 @@
         </div>
         <div class="item item-long flex wow slideInLeft">
             <img src="img/4_1.png" alt="">
-            <p class="item-text"><span>4 шаг</span><br>Процедура таможенное оформление товара</p>
+            <p class="item-text"><span>4 шаг</span><br>Процедура таможенного оформления товара</p>
         </div>
         <div class="item item-long flex wow bounceInUp">
             <img src="img/5_1.png" alt="">
@@ -251,7 +251,7 @@
         </section>
         <section class="consult clip clip-top"><a id="get"></a>
             <h3>Получить бесплатную консультацию</h3>
-            <button class="popup">Консультация</button>
+            <button class="popup button-header">Консультация</button>
         </section>
 <section class="items-group"><a id="group"></a>
     <div class="content-wrapper">
@@ -387,7 +387,7 @@
             <div class="offer-item wow bounceInUp">
                 <img src="img/111.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Оптимизация таможенных платежей</span><br>
-               Проверяем наличие всех возможных вариантов снижения таможенных платежей, не противоречащих законодательству РФ и Таможенного Союза. </p>
+                    Проверяем наличие всех возможных вариантов снижения таможенных платежей, не противоречащих законодательству РФ и Таможенного Союза. /p>
             </div>
             <div class="offer-item wow bounceInUp">
                 <img src="img/222.png" width="382" height="237" alt="">
@@ -407,12 +407,12 @@
             <div class="offer-item wow bounceInDown">
                 <img src="img/555.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Быстрая сертификация</span><br>
-                Взаимодействие с ведущими сертификационными органами и лабораториями, позволяет в кратчайшие сроки оформить любую разрешительную </p>
+                    Взаимодействие с ведущими сертификационными органами и лабораториями, позволяет в кратчайшие сроки оформить любую разрешительную  </p>
             </div>
             <div class="offer-item wow bounceInDown">
                 <img src="img/454.png" width="382" height="237" alt="">
                 <p class="offer-text"><span>Минимум рисков</span><br>
-                Колоссальный опыт наших специалистов по таможенному оформлению полностью исключает возможности ошибки при подаче ДТ.</p>
+                     Колоссальный опыт наших специалистов по таможенному оформлению полностью исключает возможности ошибки при подаче ДТ.</p>
             </div>
         </div>
         </div>
@@ -422,10 +422,10 @@
             <div class="skew-normal">
                 <h3>В цифрах</h3>
                 <div class="flex wrap jc-center">
-                <p class="skew-text">Каждый<br>сотрудник<br>Колибри оформил<br>не менее<br><span>3000</span><br>таможенных<br>деклараций</p>
-                <p class="skew-text">Каждая вторая<br>декларация<br>выпускается менее<br>чем за<br><span>5</span><br>часов</p>
-                <p class="skew-text">Каждый год<br>возвращаем<br> клиентам не<br> менее <br><span>20 000 000</span><br>рублей обеспечительных<br> платежей</p>
-                <p class="skew-text">Каждый день в<br> работе <br>находится не<br> менее<br> <span>10</span><br>деклараций</p>
+                <p class="skew-text">Каждый<br>сотрудник<br>Колибри оформил<br>не менее<br><span>2700</span><br>таможенных<br>деклараций</p>
+                <p class="skew-text">Каждая вторая<br>декларация<br>выпускается менее<br>чем за<br><span>3</span><br>часа<br>30 минут</p>
+                <p class="skew-text">Каждый год<br>возвращаем<br> клиентам не<br> менее <br><span>16 748 532</span><br>рублей обеспечительных<br> платежей</p>
+                <p class="skew-text">Каждый день в<br> работе <br>находится не<br> менее<br> <span>14</span><br>деклараций</p>
                 </div>
             </div>
             </div>
@@ -490,7 +490,7 @@
         <section class="actions clip clip-top"><a id="actions"></a>
             <h3>Акция</h3><br>
             <p>Комплексное таможенное оформление</p><br>
-            <span>за  11 990</span><br>
+            <span>за 99 рублей</span><br>
             <p>+ проверка документов в подарок</p><br>
             <button class="popup">Заказать услугу</button>
         </section>
@@ -571,7 +571,7 @@
                 <button class="js__send_call_request">Отправить</button>
             </div>
         </div>
-        <div class="wow fadeIn main-logo"><img src="img/main-logo.png" width="700" height="auto" alt=""></div>
+        <div class="main-logo"><img src="img/main-logo.png" width="700" height="auto" alt=""></div>
         <div class="overlay"></div>
         <div class="overlay-start"></div>
         <script src="js/jquery-3.4.1.min.js"></script>
