--- a/sew/index.html
+++ b/sew/index.html
@@ -717,7 +717,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i>
                                     </div>
                                 </a>
-                                <div class="item-info">
+                                <div class="item-info item-info_compare">
                                     <div class="item-name-wrapper">
                                         <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-name" data-pjax="0">Швейная машина  Janome Skyline S3</a>
                                     </div>
@@ -797,7 +797,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i>
                                     </div>
                                 </a>
-                                <div class="item-info">
+                                <div class="item-info item-info_compare">
                                     <div class="item-name-wrapper">
                                         <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-name" data-pjax="0">Швейная машина  Janome Skyline S3</a>
                                     </div>
@@ -877,7 +877,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i>
                                     </div>
                                 </a>
-                                <div class="item-info">
+                                <div class="item-info item-info_compare">
                                     <div class="item-name-wrapper">
                                         <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-name" data-pjax="0">Швейная машина  Janome Skyline S3</a>
                                     </div>
@@ -959,7 +959,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i>
                                     </div>
                                 </a>
-                                <div class="item-info">
+                                <div class="item-info item-info_compare">
                                     <div class="item-name-wrapper">
                                         <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-name" data-pjax="0">Нитки красные для швейное машины</a>
                                     </div>
