--- a/colibri/index.html
+++ b/colibri/index.html
@@ -243,7 +243,7 @@
                 <img src="img/1111.png" width="248" height="210" alt="">
                 <p>Сантехника</p>
                 <ul class="gallery-list">
-                    <li>Импорт из китая:</li>
+                    <li>Импорт из Китая:</li>
                     <li>Таможенная стоимость:<br><span>14 505.40 USD</span></li>
                     <li>Код ТН ВЭД:<br><span></span>7324900000</li>
                     <li>Время оформления:<br><span>10 часов 17 минут</span></li>
@@ -253,7 +253,7 @@
                 <img src="img/2222.png" width="248" height="210" alt="">
                 <p>Блоки питания</p>
                 <ul class="gallery-list">
-                    <li>Импорт из китая:</li>
+                    <li>Импорт из Китая:</li>
                     <li>Таможенная стоимость:<br><span>810.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8504403009</span></li>
                     <li>Время оформления:<br><span>4 часа 8 минут</span></li>
@@ -263,7 +263,7 @@
                 <img src="img/3333.png" width="248" height="210" alt="">
                 <p>Пиломатериал</p>
                 <ul class="gallery-list">
-                    <li>Импорт из китая:</li>
+                    <li>Импорт из Китая:</li>
                     <li>Таможенная стоимость:<br><span>33 280.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>4409210000</span></li>
                     <li>Время оформления:<br><span>4 часа 40 минут</span></li>
@@ -273,10 +273,150 @@
                 <img src="img/4444.png" width="248" height="210" alt="">
                 <p>Метизы</p>
                 <ul class="gallery-list">
-                    <li>Импорт из китая:</li>
+                    <li>Импорт из Китая:</li>
                     <li>Таможенная стоимость:<br>24 652.80 USD.<span></span></li>
                     <li>Код ТН ВЭД:<br><span>7318152000</span></li>
                     <li>Время оформления:<br><span>6 часов 43 минуты</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/5555.jpg" width="248" height="210" alt="">
+                <p>Экструдер</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>18 000.00 USD.<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8477200000</span></li>
+                    <li>Время оформления:<br><span>23 часа 00 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/6666.jpg" width="248" height="210" alt="">
+                <p>Тормозные колодки</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>38 615.30 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8708309109</span></li>
+                    <li>Время оформления:<br><span>7 часов 05 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/7777.jpg" width="248" height="210" alt="">
+                <p>Рис пропаренный</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Таиланда:</li>
+                    <li>Таможенная стоимость:<br>260 630.00 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>1006201500</span></li>
+                    <li>Время оформления:<br><span>15 часов 10 мин</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/8888.jpg" width="248" height="210" alt="">
+                <p>Вспенивающийся полистирол</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Кореи:</li>
+                    <li>Таможенная стоимость:<br>80 540.80 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>390311000 </span></li>
+                    <li>Время оформления:<br><span>17 часов 23 минуты</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/9999.jpg" width="248" height="210" alt="">
+                <p>Алюминиевые диски</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>26 401.50 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8708705009 </span></li>
+                    <li>Время оформления:<br><span>5 часов 50 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1010.jpg" width="248" height="210" alt="">
+                <p>Детская площадка</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>8 320.00USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>9508900000 </span></li>
+                    <li>Время оформления:<br><span>10 часов 17 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1011.jpg" width="248" height="210" alt="">
+                <p>Линия металлопроката</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Германии:</li>
+                    <li>Таможенная стоимость:<br>120 600.00 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8105900009 </span></li>
+                    <li>Время оформления:<br><span>30 часов 56 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1012.jpg" width="248" height="210" alt="">
+                <p>Томаты</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>120 600.00 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8105900009 </span></li>
+                    <li>Время оформления:<br><span>30 часов 56 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1013.jpg" width="248" height="210" alt="">
+                <p>Стеклянная посуда</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Турции:</li>
+                    <li>Таможенная стоимость:<br>6 140.40 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>7013289000 </span></li>
+                    <li>Время оформления:<br><span>8 часов 43 минуты</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1014.jpg" width="248" height="210" alt="">
+                <p>Автомобильное масло</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Америки:</li>
+                    <li>Таможенная стоимость:<br>40 602.21 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>2710198200 </span></li>
+                    <li>Время оформления:<br><span>6 часов 10 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1015.jpg" width="248" height="210" alt="">
+                <p>Лента светодиодная</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>1 220.53 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8543709000 </span></li>
+                    <li>Время оформления:<br><span>9 часов 13 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1016.jpg" width="248" height="210" alt="">
+                <p>Автомобильные стекла</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>31 658.02 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>7007111009 </span></li>
+                    <li>Время оформления:<br><span>15 часов 39 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1017.jpg" width="248" height="210" alt="">
+                <p>Кабель акустический</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Японии:</li>
+                    <li>Таможенная стоимость:<br>2 041.00 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>8544492000 </span></li>
+                    <li>Время оформления:<br><span>5 часов 12 минут</span></li>
+                </ul>
+            </div>
+            <div class="gallery-item">
+                <img src="img/1018.jpg" width="248" height="210" alt="">
+                <p>Мебельная фурнитура</p>
+                <ul class="gallery-list">
+                    <li>Импорт из Китая:</li>
+                    <li>Таможенная стоимость:<br>43 764.45 USD<span></span></li>
+                    <li>Код ТН ВЭД:<br><span>3926300000 </span></li>
+                    <li>Время оформления:<br><span>4 часа 22 минуты</span></li>
                 </ul>
             </div>
         </div>
