--- a/colibri/index.html
+++ b/colibri/index.html
@@ -622,7 +622,7 @@
                     <input type="text" name="system_field_2" value="" autocomplete="off" />
                 </div>
             </div>
-            <button class="js__send_question">Отправить</button>
+            <button class="js__send_question button-header">Отправить</button>
             </div>
         </section>
         <section class="feedback"><a id="feedback"></a>
@@ -672,7 +672,7 @@
             <p>Комплексное таможенное оформление</p><br>
             <span>за 99 рублей</span><br>
             <p>+ проверка документов в подарок</p><br>
-            <button class="popup">Заказать услугу</button>
+            <button class="popup button-header">Заказать услугу</button>
         </section>
         <section class="timer">
             <div class="content-wrapper">
