--- a/colibri/index.html
+++ b/colibri/index.html
@@ -134,7 +134,7 @@
                     <img src="img/05.png" width="40" height="40" alt="">
                     <p class="why-text">Оформление разрешительной докумемнтации<br><span>необходимой для таможенного оформления товара</span></p>
                 </div>
-                <button class="arrow"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button>
+                <button class="arrow arrow-left"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button>
             </div>
             <div class="tabs-content active">
             <div class="why-scroll">
