--- a/colibri/index.html
+++ b/colibri/index.html
@@ -149,11 +149,11 @@
             </div>
             <div class="tabs-content">
                     <div class="why-scroll">
-                        <p>-Оплата только по факту выпуска таможенной декларации; 
-                            -Предоставление закрывающих документов в день выпуска;  
-                            -Персональный менеджер;
-                            -ещё что то 
-                            -и ещё что то
+                        <p>-Оплата только по факту выпуска таможенной декларации; <br>
+                            -Предоставление закрывающих документов в день выпуска;  <br>
+                            -Персональный менеджер;<br>
+                            -ещё что то <br>
+                            -и ещё что то<br>
                             </p>
         
                     </div>
@@ -182,17 +182,17 @@
         <div class="tabs-content">
         <div class="why-scroll">
             <p>Если вы не уверенны, какие именно сертификаты требуется при оформлении Вашего товара, либо у Вас не полный пакет документов, мы проконсультируем, либо самостоятельно оформим:
-                - сертификаты (декларации) в системе ГОСТ Р;
-                -сертификаты (декларации) о соответствии Техническому Регламенту Таможенного Союза;
-                -сертификаты (декларации) о соответствии Техническому Регламенту Российской Федерации;
-                -сертификаты (декларации) в области пожарной безопасности;
-                -экспертные заключения;
-                -отказные письма;
-                -сертификаты происхождения (СТ-1, А, общая форма, акты экспертизы);
-                -санитарно-эпидемиологическое заключение (в том числе радиологическое);
-                -разъяснения ВНИИС и органов по сертификации;
-                -заключение торгово-промышленной палаты;
-                -ветеринарные документы (сертификаты, разрешения на ввоз).
+                - сертификаты (декларации) в системе ГОСТ Р;<br>
+                -сертификаты (декларации) о соответствии Техническому Регламенту Таможенного Союза;<br>
+                -сертификаты (декларации) о соответствии Техническому Регламенту Российской Федерации;<br>
+                -сертификаты (декларации) в области пожарной безопасности;<br>
+                -экспертные заключения;<br>
+                -отказные письма;<br>
+                -сертификаты происхождения (СТ-1, А, общая форма, акты экспертизы);<br>
+                -санитарно-эпидемиологическое заключение (в том числе радиологическое);<br>
+                -разъяснения ВНИИС и органов по сертификации;<br>
+                -заключение торгово-промышленной палаты;<br>
+                -ветеринарные документы (сертификаты, разрешения на ввоз).<br>
                 </p>
 
         </div>
