--- a/colibri/index.html
+++ b/colibri/index.html
@@ -14,7 +14,6 @@
         <link rel="stylesheet" href="css/animate.css">
         <title>Colibri</title>
         <meta name="description" content="Colibri">
-        <meta name="robots" content="noindex,nofollow">
         <link rel="shortcut icon" href="fav.ico" type="image/x-icon" />
     </head>
     <body>
@@ -134,7 +133,7 @@
                     <img src="img/05.png" width="40" height="40" alt="">
                     <p class="why-text">Оформление разрешительной докумемнтации<br><span>необходимой для таможенного оформления товара</span></p>
                 </div>
-                <button class="arrow arrow-left"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button>
+                <!-- <button class="arrow arrow-left"><img src="img/right-arrow.png" alt=""></button><button class="arrow arrow-2"><img src="img/right-arrow.png" alt=""></button> -->
             </div>
             <div class="tabs-content active">
             <div class="why-scroll">
@@ -256,14 +255,14 @@
                     <li>Импорт из Китая:</li>
                     <li>Таможенная стоимость:<br><span>810.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8504403009</span></li>
-                    <li>Время оформления:<br><span>4 часа 8 минут</span></li>
+                    <li>Время оформления:<br><span>2 часа 8 минут</span></li>
                 </ul>
             </div>
             <div class="gallery-item">
                 <img src="img/3333.png" width="248" height="210" alt="">
                 <p>Пиломатериал</p>
                 <ul class="gallery-list">
-                    <li>Импорт из Китая:</li>
+                    <li>Экспорт в Китай:</li>
                     <li>Таможенная стоимость:<br><span>33 280.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>4409210000</span></li>
                     <li>Время оформления:<br><span>4 часа 40 минут</span></li>
@@ -274,9 +273,9 @@
                 <p>Метизы</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>24 652.80 USD.<span></span></li>
+                    <li>Таможенная стоимость:<br><span>24 652.80 USD.</span></li>
                     <li>Код ТН ВЭД:<br><span>7318152000</span></li>
-                    <li>Время оформления:<br><span>6 часов 43 минуты</span></li>
+                    <li>Время оформления:<br><span>0 часов 43 минуты</span></li>
                 </ul>
             </div>
             <div class="gallery-item">
@@ -284,7 +283,7 @@
                 <p>Экструдер</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>18 000.00 USD.<span></span></li>
+                    <li>Таможенная стоимость:<br><span>18 000.00 USD.</span></li>
                     <li>Код ТН ВЭД:<br><span>8477200000</span></li>
                     <li>Время оформления:<br><span>23 часа 00 минут</span></li>
                 </ul>
@@ -304,7 +303,7 @@
                 <p>Рис пропаренный</p>
                 <ul class="gallery-list">
                     <li>Импорт из Таиланда:</li>
-                    <li>Таможенная стоимость:<br>260 630.00 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>260 630.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>1006201500</span></li>
                     <li>Время оформления:<br><span>15 часов 10 мин</span></li>
                 </ul>
@@ -314,9 +313,9 @@
                 <p>Вспенивающийся полистирол</p>
                 <ul class="gallery-list">
                     <li>Импорт из Кореи:</li>
-                    <li>Таможенная стоимость:<br>80 540.80 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>80 540.80 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>390311000 </span></li>
-                    <li>Время оформления:<br><span>17 часов 23 минуты</span></li>
+                    <li>Время оформления:<br><span>0 часов 23 минуты</span></li>
                 </ul>
             </div>
             <div class="gallery-item">
@@ -324,7 +323,7 @@
                 <p>Алюминиевые диски</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>26 401.50 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>26 401.50 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8708705009 </span></li>
                     <li>Время оформления:<br><span>5 часов 50 минут</span></li>
                 </ul>
@@ -344,7 +343,7 @@
                 <p>Линия металлопроката</p>
                 <ul class="gallery-list">
                     <li>Импорт из Германии:</li>
-                    <li>Таможенная стоимость:<br>120 600.00 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>120 600.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8105900009 </span></li>
                     <li>Время оформления:<br><span>30 часов 56 минут</span></li>
                 </ul>
@@ -354,9 +353,9 @@
                 <p>Томаты</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>120 600.00 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>120 600.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8105900009 </span></li>
-                    <li>Время оформления:<br><span>30 часов 56 минут</span></li>
+                    <li>Время оформления:<br><span>5 часов 3 минут</span></li>
                 </ul>
             </div>
             <div class="gallery-item">
@@ -364,7 +363,7 @@
                 <p>Стеклянная посуда</p>
                 <ul class="gallery-list">
                     <li>Импорт из Турции:</li>
-                    <li>Таможенная стоимость:<br>6 140.40 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>6 140.40 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>7013289000 </span></li>
                     <li>Время оформления:<br><span>8 часов 43 минуты</span></li>
                 </ul>
@@ -374,7 +373,7 @@
                 <p>Автомобильное масло</p>
                 <ul class="gallery-list">
                     <li>Импорт из Америки:</li>
-                    <li>Таможенная стоимость:<br>40 602.21 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>40 602.21 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>2710198200 </span></li>
                     <li>Время оформления:<br><span>6 часов 10 минут</span></li>
                 </ul>
@@ -384,7 +383,7 @@
                 <p>Лента светодиодная</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>1 220.53 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>1 220.53 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8543709000 </span></li>
                     <li>Время оформления:<br><span>9 часов 13 минут</span></li>
                 </ul>
@@ -394,7 +393,7 @@
                 <p>Автомобильные стекла</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>31 658.02 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>31 658.02 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>7007111009 </span></li>
                     <li>Время оформления:<br><span>15 часов 39 минут</span></li>
                 </ul>
@@ -404,7 +403,7 @@
                 <p>Кабель акустический</p>
                 <ul class="gallery-list">
                     <li>Импорт из Японии:</li>
-                    <li>Таможенная стоимость:<br>2 041.00 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>2 041.00 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>8544492000 </span></li>
                     <li>Время оформления:<br><span>5 часов 12 минут</span></li>
                 </ul>
@@ -414,7 +413,7 @@
                 <p>Мебельная фурнитура</p>
                 <ul class="gallery-list">
                     <li>Импорт из Китая:</li>
-                    <li>Таможенная стоимость:<br>43 764.45 USD<span></span></li>
+                    <li>Таможенная стоимость:<br><span>43 764.45 USD</span></li>
                     <li>Код ТН ВЭД:<br><span>3926300000 </span></li>
                     <li>Время оформления:<br><span>4 часа 22 минуты</span></li>
                 </ul>
@@ -602,10 +601,10 @@
             <div class="skew-normal">
                 <h3>В цифрах</h3>
                 <div class="flex wrap jc-center">
-                <p class="skew-text">Каждый<br>сотрудник<br>Колибри оформил<br>не менее<br><span>2700</span><br>таможенных<br>деклараций</p>
-                <p class="skew-text">Каждая вторая<br>декларация<br>выпускается менее<br>чем за<br><span>3</span><br>часа<br>30 минут</p>
-                <p class="skew-text">Каждый год<br>возвращаем<br> клиентам не<br> менее <br><span>16 748 532</span><br>рублей обеспечительных<br> платежей</p>
-                <p class="skew-text">Каждый день в<br> работе <br>находится не<br> менее<br> <span>14</span><br>деклараций</p>
+                <p class="skew-text">Каждый<br>сотрудник<br>Колибри оформил<br>не менее<br><span class="spin-number">2700</span><br>таможенных<br>деклараций</p>
+                <p class="skew-text">Каждая вторая<br>декларация<br>выпускается менее<br>чем за<br><span class="spin-number">3</span><br>часа<br>30 минут</p>
+                <p class="skew-text">Каждый год<br>возвращаем<br> клиентам не<br> менее <br><span class="spin-number">16748532</span><br>рублей обеспечительных<br> платежей</p>
+                <p class="skew-text">Каждый день в<br> работе <br>находится не<br> менее<br> <span class="spin-number">14</span><br>деклараций</p>
                 </div>
             </div>
             </div>
@@ -672,7 +671,7 @@
             <p>Комплексное таможенное оформление</p><br>
             <span>за 99 рублей</span><br>
             <p>+ проверка документов в подарок</p><br>
-            <button class="popup button-header">Заказать услугу</button>
+            <button class="popup popup-us button-header">Заказать услугу</button>
         </section>
         <section class="timer">
             <div class="content-wrapper">
@@ -726,11 +725,43 @@
             </div>
         </section>
         <footer class="clip-top"><a id="contact"></a>
-            <div class="content-wrapper">
-            <img src="img/logo_2.png" alt="">
-            <div class="footer-contact flex wrap jc-sa">
-                <p><b>Адрес:</b> 630132, Россия, г. Москва, ул. Ленинградский проспект 37/3, офис 77</p>
+            <div style="text-align: center;" class="content-wrapper">
+                    <div class="tabs">
+                        <div class="tabs-buttons">
+                            <button class="text-button active">Импорт</button>
+                            <button class="text-button">Экспорт</button>
+                        </div>
+                        <div class="flex wrap jc-sa tabs-content active">
+                            <input value="" name="fields[Товар]" type="text" placeholder="Товар"/>
+                            <input value="" name="fields[Стоимость]" type="number" placeholder="Стоимость" />
+                            <input value="" name="fields[Страна происхождения]" type="text" placeholder="Страна происхождения" />
+                            <input value="" name="fields[Имя]" type="text" placeholder="Имя" required="required" />
+                            <input value="" name="fields[Телефон]" type="tel" placeholder="Телефон" required="required" />
+                            <input value="" name="fields[Email]" type="mail" placeholder="Email" />
+                        </div>
+                        <div class="flex wrap jc-sa tabs-content">
+                            <input value="" name="fields[Товар]" class="form-short" type="text" placeholder="Товар" />
+                            <input value="" name="fields[Стоимость]" class="form-short" type="number" placeholder="Стоимость" />
+                            <input value="" name="fields[Страна происхождения]" class="form-short" type="text" placeholder="Страна происхождения" />
+                            <input value="" name="fields[Страна назначения]" class="form-short" type="text" placeholder="Страна назначения" />
+                            <input value="" name="fields[Имя]" type="text" placeholder="Имя" required="required" />
+                            <input value="" name="fields[Телефон]" type="tel" placeholder="Телефон" required="required" />
+                            <input value="" name="fields[Email]" type="mail" placeholder="Email" />
+                        </div>
+                    </div>
+                    <input class="check2" type="checkbox" id="test2" value="да"/>
+                    <label for="test2">Я знаю код ТНВЭД</label>
+                    <input class="tnved2" type="text" placeholder="ТНВЭД">
+                    <div class="check_robot_fields">
+                        <input type="text" required="required" name="system_field_1" value="" autocomplete="off" class="system_field_1"/>
+                        <input type="text" name="system_field_2" value="" autocomplete="off" />
+                    </div>
+                    <button class="text-button js__send_active_tab">Рассчитать</button>
+                </div>
+            <div style="align-items: center;" class="footer-contact flex wrap jc-sa">
+                <p><b>Адрес:</b> 630132,<br> Россия, г. Москва,<br> ул. Ленинградский проспект 37/3, <br>офис 77</p>
                 <p><b>Телефон:</b><br> <a href="tel:+74995609090">+7 (499) 560- 90-90</a></p>
+                <img src="img/logo_2.png" alt="">
                 <p><b>Email:</b><br> <a href="mailto:colibri@gmail.com">colibri@gmail.com</a></p>
                 <p><b>Время работы:</b><br> ПН-ПТ. 9.00-18.00</p>
             </div>
@@ -751,12 +782,30 @@
                 <button class="js__send_call_request">Отправить</button>
             </div>
         </div>
+        <div class="popup-callback popup-usluga">
+                <button class="img-close"><img src="img/close.png" alt="" width="19" height="19"></button>
+                <p>Заказать услугу</p>
+                <div class="not_me_remove">
+                        <input type="checkbox" id="zakaz" value="да"/>
+                        <label style="color: #000; margin-bottom: 20px; display: inline-block;"  for="zakaz">Хочу участвовать в акции</label>
+                        
+                    <input class="popup-form" type="text" value="" name="fields[Имя]" placeholder="Ваше имя" required="required">
+                    <input class="popup-form" type="phone" value="" name="fields[Телефон]" placeholder="+7 (xxx) xxx xx xx" required="required">
+                    <input class="popup-form" type="mail" value="" name="fields[E-mail]" placeholder="Ваш email">
+                    <div class="check_robot_fields">
+                        <input type="text" required="required" name="system_field_1" value="" autocomplete="off" class="system_field_1"/>
+                        <input type="text" name="system_field_2" value="" autocomplete="off" />
+                    </div>
+                    <button class="js__send_call_request">Отправить</button>
+                </div>
+            </div>
         <div class="main-logo"><img src="img/main-logo.png" width="700" height="auto" alt=""></div>
         <div class="overlay"></div>
         <div class="overlay-start"></div>
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/script.js"></script>
         <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jq-spin.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
         <script type="text/javascript">
             new WOW().init();
