--- a/colibri/index.html
+++ b/colibri/index.html
@@ -48,7 +48,7 @@
                 </ul>
                  <img class="little-logo" src="img/logo.png" alt="">
             </div>
-            <button style="position: absolute;" class="button-header popup">Заказать звонок</button>
+            <button style="position: absolute;" id="zvonok" class="button-header popup button-no-mobile">Заказать звонок</button>
         </header>
     </div>
         <section class="top-form clip">
@@ -430,7 +430,7 @@
         </section>
         <section class="consult clip clip-top"><a id="get"></a>
             <h3>Получить бесплатную консультацию</h3>
-            <button class="popup button-header">Консультация</button>
+            <button id="zvonok1" class="popup button-header">Консультация</button>
         </section>
 <section class="items-group"><a id="group"></a>
     <div class="content-wrapper">
@@ -703,7 +703,7 @@
             <p>Комплексное таможенное оформление</p><br>
             <span>за 99 рублей</span><br>
             <p>+ проверка документов в подарок</p><br>
-            <button class="popup popup-us button-header">Заказать услугу</button>
+            <button id="zakazat" class="popup popup-us button-header">Заказать услугу</button>
         </section>
         <section class="timer">
             <div class="content-wrapper">
@@ -800,7 +800,7 @@
             </div>
         </footer>
 
-        <div class="popup-callback">
+        <div id="zvonok-popup" class="popup-callback">
             <button class="img-close"><img src="img/close.png" alt="" width="19" height="19"></button>
             <p>Заказать звонок</p>
             <div class="not_me_remove">
