--- a/colibri/index.html
+++ b/colibri/index.html
@@ -631,7 +631,7 @@
             <div class="feedback-item flex wrap">
                 <img src="img/1.png" alt="">
                 <h4 class="feedback-name">Вадим Сергеевич </h4>
-                <p class="text-feedback"><b>Производство сэндвич панелей, г. Томск </b><br>
+                <p class="text-feedback"><b>Производство сэндвич панелей<br> г. Томск </b><br><br>
                     За непродолжительный срок сотрудничества с компанией Колибри, убедился, что ребята профессионалы, даже скажу
                     больше, фанаты своего дела. Срок таможенного оформления сокращен с 4-5 дней до 1 рабочего дня, а это
                     существенная оптимизация расходов по хранению контейнеров, с учетом нашего объёмов импорта. Успехов Вам и
@@ -641,7 +641,7 @@
             <div class="feedback-item flex wrap">
                 <img src="img/1.png" alt="">
                 <h4 class="feedback-name">Светлана </h4>
-                <p class="text-feedback"><b>Горно-шахтное оборудование, г. Кемерово</b><br>
+                <p class="text-feedback"><b>Горно-шахтное оборудование<br> г. Кемерово</b><br><br>
                     Компанию посоветовали партнеры и мы не разу не пожалели, что начали с ними сотрудничать. Во-первых, мы экономим
                     массу времени на подготовке документов для таможни, у Колибри есть услуга по проверке и подготовке необходимых
                     документов, во-вторых, очень удобная система оплаты по итогу месяца, не нужно согласовывать с бухгалтерией
@@ -652,7 +652,7 @@
             <div class="feedback-item flex wrap">
                 <img src="img/1.png" alt="">
                 <h4 class="feedback-name">Фазаил</h4>
-                <p class="text-feedback"><b>Производство спецодежды, г. Екатеринбург</b><br>
+                <p class="text-feedback"><b>Производство спецодежды<br> г. Екатеринбург</b><br><br>
                     Мы работаем с китайскими и европейскими материалами, вынуждены оформляться на 5 разных Таможнях. Раньше нам
                     приходилось искать декларантов на каждом посту, сейчас же вопрос таможенного оформления находится в одних
                     надежных руках Колибри. Очень удобно что данный таможенный агент работает со всеми без исключения постами и
@@ -663,7 +663,7 @@
             <div class="feedback-item flex wrap">
                 <img src="img/1.png" alt="">
                 <h4 class="feedback-name">Дмитрий</h4>
-                <p class="text-feedback"><b>Продажа химической продукции, г. Новосибирск </b><br>
+                <p class="text-feedback"><b>Продажа химической продукции<br> г. Новосибирск </b><br><br>
                     Возим опасные грузы, требующие оформление специальной разрешительной документации. Благодаря отлаженным
                     действиям сотрудников Колибри, сертификаты теперь оформляются четко в срок, до прихода контейнеров в порт. Мы
                     перестали платить простои. Кроме того, они посоветовали нам транспортную компанию, которая значительно сократила
@@ -674,7 +674,7 @@
             <div class="feedback-item flex wrap">
                 <img src="img/1.png" alt="">
                 <h4 class="feedback-name">Валерий Николаевич</h4>
-                <p class="text-feedback"><b>Продажа и обслуживание холодильного оборудования, г. Москва </b><br>
+                <p class="text-feedback"><b>Продажа и обслуживание холодильного оборудования<br> г. Москва </b><br><br>
                     Огромное спасибо компании Колибри! Работаем с Китайскими производителями больше 10 лет, пробовали работать с
                     различными брокерами, нанимали декларанта в штат…Но сейчас даже речи быть не может о смене таможенного
                     представителя, декларации выпускаются практически по щелчку пальцев, а если и возникают какие-то проблемы, то
@@ -685,7 +685,7 @@
                 <div class="feedback-item flex wrap">
                     <img src="img/1.png" alt="">
                     <h4 class="feedback-name">Наталья Сергеевна</h4>
-                    <p class="text-feedback"><b>Производство и продажа мебели, г. Новосибирск </b><br>
+                    <p class="text-feedback"><b>Производство и продажа мебели<br> г. Новосибирск </b><br><br>
                         Гуру таможенного оформления, волшебники сертификации, профессионалы, для которых не существует никаких преград и
                         отговорок. Colibri не раз доказали, что способны решить любую проблему, связанную с таможней, на любом
                         расстоянии и в любое время суток. Не так давно спасли меня от больших финансовых потерь, растаможили груз за
