--- a/colibri/index.html
+++ b/colibri/index.html
@@ -791,10 +791,10 @@
                     <button class="text-button js__send_active_tab">Рассчитать</button>
                 </div>
             <div style="align-items: center;" class="footer-contact flex wrap jc-sa">
-                <p><b>Адрес:</b> 630132,<br> Россия, г. Москва,<br> ул. Ленинградский проспект 37/3, <br>офис 77</p>
-                <p><b>Телефон:</b><br> <a href="tel:+74995609090">+7 (499) 560- 90-90</a></p>
+                <p><b>Адрес:</b> 630008,<br> Россия, г. Новосибирск,<br> ул. Бориса Богаткова 99, <br>офис 415</p>
+                <p><b>Телефон:</b><br> <a href="tel:+74995609090">+7 (383) 383-47-18</a></p>
                 <img src="img/logo_2.png" width="230" alt="">
-                <p><b>Email:</b><br> <a href="mailto:colibri@gmail.com">colibri@gmail.com</a></p>
+                <p><b>Email:</b><br> <a href="mailto:info@colibri-customs.ru">info@colibri-customs.ru</a></p>
                 <p><b>Время работы:</b><br> ПН-ПТ. 9.00-18.00</p>
             </div>
             </div>
