--- a/test_game/index.html
+++ b/test_game/index.html
@@ -26,7 +26,7 @@
 window.onload=function(){
 var popup = document.querySelector('.popup');
 function show(){
-   popup.style.display = 'block'
+   popup.style.display = 'flex'
 }
 setTimeout(show, 2000)
 }
