--- a/test_game/index.html
+++ b/test_game/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="forms">
         <form id="form1" action="">
-        <div class="input-wrapper"><input onkeyup='checkParams()' class="email" type="email" placeholder="Login or email address"></div>
+        <div class="input-wrapper"><div class="error"></div><div class="ok"></div><input onkeyup='checkParams()' class="email" type="email" placeholder="Login or email address"></div>
         <input onkeyup='checkParams()' class="pass" type="password" placeholder="Password" >
-        <input onkeyup='checkParams()' class="pass" type="password" placeholder="Repeat password" >
+        <input onkeyup='checkParams()' class="pass2" type="password" placeholder="Repeat password" >
         <button type="submit" form="form1" class="button">SIGN UP</button>
         </form>
         </div>
@@ -35,30 +35,24 @@ function show(){
 }
 setTimeout(show, 2000)
 }
-</script>
-<script>
+
 $('.close').click(function() { 
         $('.popup').hide();
     });
 
-</script>
-<script>
 function checkParams() {
     var email = $('.email').val();
     var password = $('.pass').val();
+    var passwordConfirm = $('.pass2').val();
     
-    if(email.length != 0 && password.length != 0) {
+    if(email.length != 0 && password.length != 0 && passwordConfirm.length != 0) {
         $('.button').addClass('button-active');
+        $('.ok').show();
+        $('.email').css("border-color","#e5e5e5")
     } else {
         $('.button').attr('disabled', 'disabled');
+        $('.error').show();
     }
 }
+
 </script>
-<!-- <script>
-function validate() {
-    var email = $('.email').val();
-    if(email.length > 3){
-        $(".ok").show()
-    }
-}
-</script> -->
