--- a/test_game/index.html
+++ b/test_game/index.html
@@ -21,7 +21,7 @@
         <button type="submit" form="form1" class="button">SIGN UP</button>
         </form>
         </div>
-        <div class="close"></div>
+        <div class="close">123</div>
     </div>
     
 </body>
@@ -36,9 +36,6 @@ function show(){
 setTimeout(show, 2000)
 }
 
-<<<<<<< HEAD
-document.querySelector
-=======
 $('.close').click(function() { 
         $('.popup').hide();
     });
@@ -58,5 +55,4 @@ function checkParams() {
     }
 }
 
->>>>>>> 6a21da53fe49cf56d7fc2eb8a08d6330cac69269
 </script>
