--- a/sew/index.html
+++ b/sew/index.html
@@ -33,9 +33,12 @@
                             <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-img" data-pjax="0">
                                 <img class="lazy img-responsive"
                                 src="https://sew-club.ru/upload/img/thumbs/frontend_product_list/productimage/image/5a7bf24365d0f.jpg">
-                                <div class="stars">
-                                    <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i
-                                        class="star star-o"></i><i class="star star-o"></i>
+                                <div class="stars_compare">
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
                                 </div>
                             </a>
                             <div class="item-info_compare">
@@ -116,9 +119,98 @@
                             <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-img" data-pjax="0">
                                 <img class="lazy img-responsive"
                                     src="https://sew-club.ru/upload/img/thumbs/frontend_product_list/productimage/image/5a7bf24365d0f.jpg">
-                                <div class="stars">
-                                    <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i
-                                        class="star star-o"></i><i class="star star-o"></i>
+                                    <div class="stars_compare">
+                                        <i class="star_compare"></i>
+                                        <i class="star_compare"></i>
+                                        <i class="star_compare"></i>
+                                        <i class="star_compare"></i>
+                                        <i class="star_compare"></i>
+                                    </div>
+                            </a>
+                            <div class="item-info_compare">
+                                <div class="item-name-wrapper_compare">
+                                    <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-name_compare"
+                                        data-pjax="0">Швейная машина Janome Skyline S3</a>
+                                </div>
+                                <div>
+                                    <table class="table table-striped table-chars">
+                                        <tbody>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Страна</p>
+                                                <p class="text_compare">Тайвань</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Наличие</p>
+                                                <p class="text_compare"> в наличии
+                                                </p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Тип</p>
+                                                <p class="text_compare">Швейная машина </p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Артикул</p>
+                                                <p class="text_compare">SkylineS3</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Мощность</p>
+                                                <p class="text_compare">50</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Типы ткани</p>
+                                                <p class="text_compare">сверхтонкие/тонкие/средние/плотные</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Длина стежка</p>
+                                                <p class="text_compare">до 5</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Регулировка давления лапки на ткань</p>
+                                                <p class="text_compare">есть</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Максимальная скорость шитья</p>
+                                                <p class="text_compare">850</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Цель покупки</p>
+                                                <p class="text_compare">Большой функционал</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Высота подъема лапки</p>
+                                                <p class="text_compare">14</p>
+                                            </div>
+                                            <div class="flex jc-sb">
+                                                <p class="text_compare">Чехол</p>
+                                                <p class="text_compare">жесткий</p>
+                                            </div>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="item-price_compare"><span>41 900</span></div>
+
+                                <a href="" class="btn-compare"
+                                    data-link="/basket/add?id=6020">
+                                    Купить</a>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="catalog-item_compare">
+                        <div class="block_compare compare-delete">
+                            <a href="" data-product-id="6020">Удалить из сравнения</a>
+                        </div>
+                        <div class="item-body clearfix">
+                            <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-img" data-pjax="0">
+                                <img class="lazy img-responsive"
+                                src="https://sew-club.ru/upload/img/thumbs/frontend_product_list/productimage/image/5a7bf24365d0f.jpg">
+                                <div class="stars_compare">
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
                                 </div>
                             </a>
                             <div class="item-info_compare">
@@ -199,92 +291,12 @@
                             <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-img" data-pjax="0">
                                 <img class="lazy img-responsive"
                                 src="https://sew-club.ru/upload/img/thumbs/frontend_product_list/productimage/image/5a7bf24365d0f.jpg">
-                                <div class="stars">
-                                    <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i
-                                        class="star star-o"></i><i class="star star-o"></i>
-                                </div>
-                            </a>
-                            <div class="item-info_compare">
-                                <div class="item-name-wrapper_compare">
-                                    <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-name_compare"
-                                        data-pjax="0">Швейная машина Janome Skyline S3</a>
-                                </div>
-                                <div>
-                                    <table class="table table-striped table-chars">
-                                        <tbody>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Страна</p>
-                                                <p class="text_compare">Тайвань</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Наличие</p>
-                                                <p class="text_compare"> в наличии
-                                                </p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Тип</p>
-                                                <p class="text_compare">Швейная машина </p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Артикул</p>
-                                                <p class="text_compare">SkylineS3</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Мощность</p>
-                                                <p class="text_compare">50</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Типы ткани</p>
-                                                <p class="text_compare">сверхтонкие/тонкие/средние/плотные</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Длина стежка</p>
-                                                <p class="text_compare">до 5</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Регулировка давления лапки на ткань</p>
-                                                <p class="text_compare">есть</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Максимальная скорость шитья</p>
-                                                <p class="text_compare">850</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Цель покупки</p>
-                                                <p class="text_compare">Большой функционал</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Высота подъема лапки</p>
-                                                <p class="text_compare">14</p>
-                                            </div>
-                                            <div class="flex jc-sb">
-                                                <p class="text_compare">Чехол</p>
-                                                <p class="text_compare">жесткий</p>
-                                            </div>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="item-price_compare"><span>41 900</span></div>
-
-                                <a href="" class="btn-compare"
-                                    data-link="/basket/add?id=6020">
-                                    Купить</a>
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="catalog-item_compare">
-                        <div class="block_compare compare-delete">
-                            <a href="" data-product-id="6020">Удалить из сравнения</a>
-                        </div>
-                        <div class="item-body clearfix">
-                            <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-img" data-pjax="0">
-                                <img class="lazy img-responsive"
-                                src="https://sew-club.ru/upload/img/thumbs/frontend_product_list/productimage/image/5a7bf24365d0f.jpg">
-                                <div class="stars">
-                                    <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i
-                                        class="star star-o"></i><i class="star star-o"></i>
+                                <div class="stars_compare">
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
                                 </div>
                             </a>
                             <div class="item-info_compare">
@@ -367,9 +379,12 @@
                             <a href="/catalog/svejnye-masiny/svejnye-masiny-janome/6020" class="item-img" data-pjax="0">
                                 <img class="lazy img-responsive"
                                 src="https://sew-club.ru/upload/img/thumbs/frontend_product_list/productimage/image/5a7bf24365d0f.jpg">
-                                <div class="stars">
-                                    <i class="star star-o"></i><i class="star star-o"></i><i class="star star-o"></i><i
-                                        class="star star-o"></i><i class="star star-o"></i>
+                                <div class="stars_compare">
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
+                                    <i class="star_compare"></i>
                                 </div>
                             </a>
                             <div class="item-info_compare">
@@ -450,7 +465,7 @@
     </body>
 
 </html>
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script>
     (function ($) {
         $(function () {
